--- a/zgrep.in
+++ b/zgrep.in
@@ -210,14 +210,11 @@ do
         (eval "$grep" 4>&-; echo $? >&4) 3>&- | sed "$sed_script" >&3 4>&-
       ) && exit $r
       r=$?
-      test $r -gt 128 && test $r -le 143 && exit $r || exit 2
+      test 1 -lt $r && exit $r || exit 2
     fi >&3 5>&-
   )
   r=$?
-  if test $r -gt 128 && test $r -le 143; then
-    kill -$(($r-128)) $$
-    exit $r
-  fi
+  test 128 -lt $r && exit $r
   test "$gzip_status" -eq 0 || test "$gzip_status" -eq 2 || r=2
   test $res -lt $r && res=$r
 done
