maint: use gnulib's new readme-release module
* bootstrap.conf (gnulib_modules): Add readme-release.
(bootstrap_epilogue): Add the recommended perl one-liner.
* README-release: Remove file; it is now generated from gnulib.
* .gitignore: Add it.

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@
 *~
 .deps
 /GNUmakefile
-/maint.mk
+/GNUmakefile
 /INSTALL
-Makefile
-Makefile.in
+/README-release
 /aclocal.m4
 /build-aux
 /config.status
@@ -24,6 +23,8 @@ Makefile.in
 /lib/c++defs.h
 /lib/warn-on-use.h
 /libver.a
+/maint.mk
+/maint.mk
 /version.[ch]
 /zcat
 /zcmp
@@ -35,7 +36,7 @@ Makefile.in
 /zless
 /zmore
 /znew
-/GNUmakefile
-/maint.mk
 ChangeLog
+Makefile
+Makefile.in
 gzip.doc.gz
