--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -46,6 +46,7 @@ malloc
 manywarnings
 perror
 printf-posix
+readme-release
 realloc
 stat-time
 sys_stat
@@ -78,6 +79,11 @@ perl       5.5
 rsync      -
 tar        -
 "
+
+bootstrap_epilogue()
+{
+  perl -pi -e "s/\@PACKAGE\@/$package/g" README-release
+}
 
 # Automake requires that ChangeLog exist.
 touch ChangeLog || exit 1
