maint: use gnulib's realloc-gnu and malloc-gnu modules
* bootstrap.conf (gnulib_modules): Use realloc-gnu and malloc-gnu,
rather than the now-deprecated realloc and malloc modules.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -42,12 +42,12 @@ ignore-value
 lib-ignore
 lstat
 maintainer-makefile
-malloc
+malloc-gnu
 manywarnings
 perror
 printf-posix
 readme-release
-realloc
+realloc-gnu
 stat-time
 sys_stat
 time
