--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -44,7 +44,9 @@
 /freading.m4
 /frexp.m4
 /frexpl.m4
+/fseek.m4
 /fseeko.m4
+/ftell.m4
 /ftello.m4
 /getcwd-abort-bug.m4
 /getcwd-path-max.m4
@@ -67,13 +69,18 @@
 /isnand.m4
 /isnanf.m4
 /isnanl.m4
+/largefile.m4
 /lchown.m4
 /ldexpl.m4
 /lib-ignore.m4
+/lib-ld.m4
+/lib-link.m4
+/lib-prefix.m4
 /localcharset.m4
 /locale-fr.m4
 /locale-ja.m4
 /locale-zh.m4
+/lock.m4
 /longlong.m4
 /lseek.m4
 /lstat.m4
@@ -93,6 +100,7 @@
 /nocrash.m4
 /open.m4
 /openat.m4
+/pathmax.m4
 /perror.m4
 /printf-frexp.m4
 /printf-frexpl.m4
@@ -114,9 +122,12 @@
 /stdlib_h.m4
 /strdup.m4
 /strerror.m4
+/strerror_r.m4
 /string_h.m4
+/sys_socket_h.m4
 /sys_stat_h.m4
 /sys_time_h.m4
+/threadlib.m4
 /time_h.m4
 /timespec.m4
 /unistd-safer.m4
