--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -9,6 +9,7 @@
 /cloexec.m4
 /close-stream.m4
 /close.m4
+/closedir.m4
 /closein.m4
 /closeout.m4
 /codeset.m4
@@ -19,6 +20,7 @@
 /dirname.m4
 /dos.m4
 /double-slash-root.m4
+/dup.m4
 /dup2.m4
 /errno_h.m4
 /error.m4
@@ -46,6 +48,7 @@
 /frexpl.m4
 /fseek.m4
 /fseeko.m4
+/fstat.m4
 /ftell.m4
 /ftello.m4
 /getcwd-abort-bug.m4
@@ -96,10 +99,13 @@
 /mkdir.m4
 /mmap-anon.m4
 /mode_t.m4
+/msvc-inval.m4
+/msvc-nothrow.m4
 /multiarch.m4
 /nocrash.m4
 /open.m4
 /openat.m4
+/opendir.m4
 /pathmax.m4
 /perror.m4
 /printf-frexp.m4
@@ -112,6 +118,7 @@
 /save-cwd.m4
 /signbit.m4
 /size_max.m4
+/ssize_t.m4
 /stat-time.m4
 /stat.m4
 /stdbool.m4
