build: accommodate newer bootstrap from gnulib
* bootstrap.conf (gnulib_tool_option_extras): Add both --symlink
and --makefile-name=gnulib.mk.
* bootstrap: Update from gnulib.
* tests/init.sh: Update from gnulib.
* lib/Makefile.am: Initialize all of the following so that
generated code in gnulib.mk may use += to append to those variables:
AM_CFLAGS, BUILT_SOURCES, CLEANFILES, EXTRA_DIST, MOSTLYCLEANDIRS,
MOSTLYCLEANFILES, SUFFIXES, noinst_LTLIBRARIES.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -63,7 +63,10 @@ yesno
 gnulib_tool_option_extras="\
  --avoid getline\
  --avoid rpmatch\
+ --symlink\
+ --makefile-name=gnulib.mk\
 "
+
 
 # Create build-aux, since 'bootstrap' won't do that for us.
 mkdir -p build-aux
