--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -241,3 +241,11 @@
 /savedir.h
 /quote.h
 /sys_types.in.h
+/c-ctype.c
+/c-ctype.h
+/c-strcase.h
+/c-strcasecmp.c
+/c-strcaseeq.h
+/c-strncasecmp.c
+/stat-time.c
+/timespec.c
