diagnose unexpected EOF and zero lengths in packed data
Problem reported by Aki Helin.
* NEWS: Mention Aki's reports.
* tests/unpack-invalid: New file,
with test data suggested by Aki.
* tests/Makefile.am (TESTS): Add it.
* unpack.c (read_byte): New function.
(look_bits, read_tree): Use it.
(read_tree): Check against zero bit length Huffman code.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -23,6 +23,7 @@ TESTS =					\
   null-suffix-clobber			\
   stdin					\
   trailing-nul				\
+  unpack-invalid			\
   zdiff					\
   zgrep-f				\
   zgrep-context				\
