maint: adjust to Gnulib changes
* lib/.gitignore: Add glthread, math.c, unistd.c, wctype-h.c.
* m4/.gitignore: Remove inline.m4.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -99,6 +99,7 @@
 /gettext.h
 /gettime.c
 /gettimeofday.c
+/glthread
 /gnulib.mk
 /ignore-value.h
 /intprops.h
@@ -250,3 +251,6 @@
 /stat-time.c
 /timespec.c
 /xsize.c
+/math.c
+/unistd.c
+/wctype-h.c
