maint: update .gitignore files
* lib/.gitignore, m4/.gitignore: Adjust to match current sources.
Also, sort.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -4,17 +4,19 @@
 /alloca.h
 /alloca.in.h
 /asnprintf.c
-/at-func.c
 /basename-lgpl.c
+/c-ctype.c
+/c-ctype.h
+/c-strcase.h
+/c-strcasecmp.c
+/c-strcaseeq.h
+/c-strncasecmp.c
 /calloc.c
 /charset.alias
 /chdir-long.c
 /chdir-long.h
-/chown.c
 /cloexec.c
 /cloexec.h
-/close-hook.c
-/close-hook.h
 /close-stream.c
 /close-stream.h
 /close.c
@@ -28,7 +30,9 @@
 /config.hin
 /configmake.h
 /creat-safer.c
+/dirent--.h
 /dirent-private.h
+/dirent-safer.h
 /dirent.h
 /dirent.in.h
 /dirfd.c
@@ -45,16 +49,12 @@
 /exitfail.c
 /exitfail.h
 /fchdir.c
-/fchmodat.c
-/fchown-stub.c
-/fchownat.c
 /fclose.c
 /fcntl--.h
 /fcntl-safer.h
 /fcntl.c
 /fcntl.h
 /fcntl.in.h
-/fcntl_.h
 /fd-hook.c
 /fd-hook.h
 /fd-safer.c
@@ -72,7 +72,6 @@
 /fprintf.c
 /fpucw.h
 /fpurge.c
-/fpurge.h
 /freadahead.c
 /freadahead.h
 /freading.c
@@ -84,18 +83,15 @@
 /fseterr.c
 /fseterr.h
 /fstat.c
-/fstatat.c
 /ftell.c
 /ftello.c
 /getcwd-lgpl.c
-/getcwd.c
 /getdtablesize.c
 /getopt.c
 /getopt.h
 /getopt.in.h
 /getopt1.c
 /getopt_int.h
-/getpagesize.c
 /gettext.h
 /gettime.c
 /gettimeofday.c
@@ -110,15 +106,14 @@
 /isnanf.c
 /isnanl-nolibm.h
 /isnanl.c
-/iswblank.c
 /itold.c
-/lchown.c
 /libgzip.a
 /localcharset.c
 /localcharset.h
 /lseek.c
 /lstat.c
 /malloc.c
+/math.c
 /math.h
 /math.in.h
 /mbrtowc.c
@@ -127,8 +122,6 @@
 /memchr.valgrind
 /mempcpy.c
 /memrchr.c
-/mkdir.c
-/mkdirat.c
 /msvc-inval.c
 /msvc-inval.h
 /msvc-nothrow.c
@@ -140,6 +133,7 @@
 /openat-proc.c
 /openat.c
 /openat.h
+/opendir-safer.c
 /opendir.c
 /pathmax.h
 /perror.c
@@ -153,39 +147,39 @@
 /printf-parse.c
 /printf-parse.h
 /printf.c
+/quote.h
 /quotearg.c
 /quotearg.h
+/readdir.c
 /realloc.c
 /ref-add.sed
 /ref-add.sin
 /ref-del.sed
 /ref-del.sin
-/rmdir.c
-/same-inode.h
 /save-cwd.c
 /save-cwd.h
+/savedir.c
+/savedir.h
 /signbitd.c
 /signbitf.c
 /signbitl.c
 /size_max.h
 /stamp-h1
+/stat-time.c
 /stat-time.h
 /stat.c
 /stdbool.h
 /stdbool.in.h
-/stdbool_.h
 /stddef.h
 /stddef.in.h
 /stdint.h
 /stdint.in.h
 /stdio-impl.h
-/stdio-write.c
 /stdio.h
 /stdio.in.h
-/stdio_.h
 /stdlib.h
 /stdlib.in.h
-/stdlib_.h
+/stpcpy.c
 /strdup.c
 /streq.h
 /strerror-override.c
@@ -198,21 +192,18 @@
 /sys
 /sys_stat.h
 /sys_stat.in.h
-/sys_stat_.h
 /sys_time.h
 /sys_time.in.h
-/sys_time_.h
+/sys_types.in.h
 /time.h
 /time.in.h
-/time_.h
+/timespec.c
 /timespec.h
 /unistd--.h
 /unistd-safer.h
+/unistd.c
 /unistd.h
 /unistd.in.h
-/unistd_.h
-/unlink.c
-/unlinkat.c
 /unused-parameter.h
 /utimens.c
 /utimens.h
@@ -222,36 +213,14 @@
 /vfprintf.c
 /wchar.h
 /wchar.in.h
-/wchar_.h
+/wctype-h.c
 /wctype.h
 /wctype.in.h
-/wctype_.h
 /xalloc-die.c
 /xalloc-oversized.h
 /xalloc.h
-/xgetcwd.c
-/xgetcwd.h
 /xmalloc.c
+/xsize.c
 /xsize.h
 /yesno.c
 /yesno.h
-/dirent--.h
-/dirent-safer.h
-/opendir-safer.c
-/readdir.c
-/savedir.c
-/savedir.h
-/quote.h
-/sys_types.in.h
-/c-ctype.c
-/c-ctype.h
-/c-strcase.h
-/c-strcasecmp.c
-/c-strcaseeq.h
-/c-strncasecmp.c
-/stat-time.c
-/timespec.c
-/xsize.c
-/math.c
-/unistd.c
-/wctype-h.c
