--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -4,9 +4,7 @@
 /asm-underscore.m4
 /calloc.m4
 /chdir-long.m4
-/chown.m4
 /clock_time.m4
-/cloexec.m4
 /close-stream.m4
 /close.m4
 /closedir.m4
@@ -14,21 +12,20 @@
 /closeout.m4
 /codeset.m4
 /configmake.m4
-/d-ino.m4
+/dirent-safer.m4
 /dirent_h.m4
 /dirfd.m4
 /dirname.m4
-/dos.m4
 /double-slash-root.m4
 /dup.m4
 /dup2.m4
 /errno_h.m4
 /error.m4
-/exitfail.m4
 /exponentd.m4
 /exponentf.m4
 /exponentl.m4
 /extensions.m4
+/extern-inline.m4
 /fchdir.m4
 /fclose.m4
 /fcntl-o.m4
@@ -43,20 +40,19 @@
 /fpieee.m4
 /fprintf-posix.m4
 /fpurge.m4
+/freadahead.m4
 /freading.m4
 /frexp.m4
 /frexpl.m4
 /fseek.m4
 /fseeko.m4
+/fseterr.m4
 /fstat.m4
 /ftell.m4
 /ftello.m4
-/getcwd-abort-bug.m4
-/getcwd-path-max.m4
 /getcwd.m4
 /getdtablesize.m4
 /getopt.m4
-/getpagesize.m4
 /gettime.m4
 /gettimeofday.m4
 /glibc21.m4
@@ -72,7 +68,6 @@
 /isnanf.m4
 /isnanl.m4
 /largefile.m4
-/lchown.m4
 /ldexpl.m4
 /lib-ignore.m4
 /lib-ld.m4
@@ -95,13 +90,13 @@
 /memchr.m4
 /mempcpy.m4
 /memrchr.m4
-/mkdir.m4
 /mmap-anon.m4
 /mode_t.m4
 /msvc-inval.m4
 /msvc-nothrow.m4
 /multiarch.m4
 /nocrash.m4
+/off_t.m4
 /open.m4
 /openat.m4
 /opendir.m4
@@ -112,9 +107,10 @@
 /printf-posix-rpl.m4
 /printf.m4
 /quotearg.m4
+/readdir.m4
 /realloc.m4
-/rmdir.m4
 /save-cwd.m4
+/savedir.m4
 /signbit.m4
 /size_max.m4
 /ssize_t.m4
@@ -126,6 +122,7 @@
 /stdint_h.m4
 /stdio_h.m4
 /stdlib_h.m4
+/stpcpy.m4
 /strdup.m4
 /strerror.m4
 /strerror_r.m4
@@ -133,12 +130,12 @@
 /sys_socket_h.m4
 /sys_stat_h.m4
 /sys_time_h.m4
+/sys_types_h.m4
 /threadlib.m4
 /time_h.m4
 /timespec.m4
 /unistd-safer.m4
 /unistd_h.m4
-/unlink.m4
 /utimbuf.m4
 /utimens.m4
 /utimes.m4
@@ -146,21 +143,10 @@
 /vfprintf-posix.m4
 /warn-on-use.m4
 /warnings.m4
-/wchar.m4
 /wchar_h.m4
 /wchar_t.m4
-/wctype.m4
 /wctype_h.m4
 /wint_t.m4
 /xalloc.m4
-/xgetcwd.m4
 /xsize.m4
 /yesno.m4
-/dirent-safer.m4
-/readdir.m4
-/savedir.m4
-/off_t.m4
-/sys_types_h.m4
-/extern-inline.m4
-/freadahead.m4
-/fseterr.m4
