maint: enable more syntax checks
* cfg.mk (local-checks-to-skip): Remove several rule names from this
list, thus enabling the corresponding checks.  To fix some, I made
syntactic changes to source files.  In other cases, I exempted certain
files from the checks.
Add exemptions for these:
  sc_prohibit_atoi_atof = ^(gzip|sample/sub)\.c$$
  sc_space_tab = ^lib/match\.c$$
  sc_useless_cpp_parens = ^(lib/match\.c|tailor\.h)$$
* configure.ac: Add quotes to fix under-quoting.
* deflate.c: Remove unnecessary cpp parentheses.
* tests/Makefile.am (TEST_ENVIRONMENT): Remove space-before-TAB.
* unlzw.c: Change some TABs to spaces.

--- a/configure.ac
+++ b/configure.ac
@@ -228,7 +228,7 @@ AC_CACHE_CHECK([for an assembler syntax supported by this package],
      rm -f conftest* _match.i _match.S match_.s match_.$OBJEXT;;
    esac])
 if test "$gzip_cv_assembler" != no; then
-  AC_DEFINE(ASMV, ,
+  AC_DEFINE([ASMV], ,
     [Define if an assembler version of longest_match is available.])
   AC_LIBOBJ(match)
 fi
